[tool.poetry]
name = "heroku"
version = "0.1.0"
description = ""
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gunicorn = "^20.1.0"
# metadmg = {extras = ["viz"], version = "^0.21.7"}
# metadmg = {version = "0.21.7", extras = ["viz"]}
# metadmg = {path = "metaDMG-0.21.7-py3-none-any.whl", extras = ["viz"]}
# metadmg = {path = "metaDMG-0.21.7-py3-none-any.whl"}
# dash = "^2.3.0"
# metadmg = {path = "metaDMG-0.21.7-py3-none-any.whl"}
# metadmg = {path = "metaDMG-0.21.7-py3-none-any.whl"}
# dash = "^2.3.0"
# metadmg = {path = "metaDMG-0.21.7-py3-none-any.whl", extras = ["viz"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
