[tool.poetry]
name = "metadmg-heroku"
version = "0.1.0"
description = ""
authors = ["Christian Michelsen <christianmichelsen@gmail.com>"]
readme = "README.md"
packages = [{include = "metadmg_heroku"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gunicorn = "^20.1.0"
metadmg = {extras = ["viz"], version = "^0.36.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
